@@ -1,3 +1,15 @@
+2020-09-14  Devin Rousso  <drousso@apple.com>
+
+        Web Inspector: REGRESSION(r266885): dyld: Symbol not found: __ZN9Inspector17BackendDispatcher12sendResponseElON3WTF6RefPtrINS1_8JSONImpl6ObjectENS1_13DumbPtrTraitsIS4_EEEEb
+        https://bugs.webkit.org/show_bug.cgi?id=216486
+
+        Reviewed by Joseph Pecoraro.
+
+        * inspector/InspectorBackendDispatcher.h:
+        * inspector/InspectorBackendDispatcher.cpp:
+        (Inspector::BackendDispatcher::sendResponse):
+        Add back overloads removed in r266885 so that the symbols exist.
+
 2020-09-14  Saam Barati  <sbarati@apple.com>
 
         Don't assume byte code operands are uint32 JSValues
